app.css
@tailwind base;

@tailwind components;

:root {
  scroll-behavior: smooth;
  --ratio: 1.4;
  --measure: 55ch;
  --s-4: calc(var(--s-3) / var(--ratio));
  --s-3: calc(var(--s-2) / var(--ratio));
  --s-2: calc(var(--s-1) / var(--ratio));
  --s-1: calc(var(--s0) / var(--ratio));
  --s0: 1rem;
  --s1: calc(var(--s0) * var(--ratio));
  --s2: calc(var(--s1) * var(--ratio));
  --s3: calc(var(--s2) * var(--ratio));
  --s4: calc(var(--s3) * var(--ratio));
  --s5: calc(var(--s4) * var(--ratio));
  --s6: calc(var(--s5) * var(--ratio));
  --s7: calc(var(--s6) * var(--ratio));
  --s8: calc(var(--s7) * var(--ratio));
  font-size: calc(0.33vw + 1em);
  --font-plain: Helvetica Neue, Helvetica, Arial, sans-serif;
  --font-special: "Inter Black", Helvetica, sans-serif;
  --font-mono: "IBM Plex Mono", monospace;
}

.text-base {
  font-size: var(--s0);
}
.text-sm {
  font-size: var(--s-1);
}
.font-normal {
  font-family: var(--font-plain);
}

.p\:0 {
  padding: var(--s0);
}

/**************
 * typography *
 **************/

/* ibm-plex-mono-regular - latin */
@font-face {
  font-family: "IBM Plex Mono";
  font-style: normal;
  font-weight: 400;
  src: local("IBM Plex Mono"), local("IBMPlexMono"),
    url("/public/fonts/ibm-plex-mono-v5-latin-regular.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-mono-v5-latin-regular.woff") format("woff");
  font-display: swap;
}

/* ibm-plex-mono-700 - latin */
@font-face {
  font-family: "IBM Plex Mono";
  font-style: normal;
  font-weight: 700;
  src: local("IBM Plex Mono Bold"), local("IBMPlexMono-Bold"),
    url("/public/fonts/ibm-plex-mono-v5-latin-700.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-mono-v5-latin-700.woff") format("woff");
  font-display: swap;
}
/* inter-900 - latin */
@font-face {
  font-family: "Inter Black";
  font-style: normal;
  font-weight: 900;
  src: local("Inter Black"),
    url("/public/fonts/inter-v1-latin-900.woff2") format("woff2"),
    url("/public/fonts/inter-v1-latin-900.woff") format("woff");
  font-display: fallback;
}

body {
  font-family: var(--font-plain);
}
h1 {
  font-family: var(--font-special);
  font-weight: 900;
  font-size: calc(var(--s3) + 3vw);
  line-height: 1.1;
}
h2 {
  line-height: 1.1;
}
p {
  @apply leading-relaxed;
}

.home h2 {
  font-family: var(--font-special);
  font-weight: 900;
  font-size: var(--s2);
  scroll-margin-top: var(--s5);
}
h3 {
  font-size: var(--s1);
  @apply font-bold;
}

a {
  text-decoration: underline;
}
a:hover {
  text-decoration: none;
}

strong,
b {
  font-weight: 700;
}

.home header {
  min-height: calc(100vh - 3vmin);
  max-width: calc(var(--measure) * 1.3);
  @apply flex flex-col justify-center;
  padding: var(--s0);
}
footer {
  font-size: var(--s-1);
}

.home article {
  max-width: var(--measure);
}

/**************
 * navigation *
 **************/

.home nav {
  @apply flex flex-col flex-wrap items-start;
}

.home nav a:not(#contact) {
  padding: var(--s-2) var(--s-1);
  margin-bottom: var(--s0);
}
@media (min-width: 640px) {
  .home nav {
    @apply flex-row;
    margin-bottom: 0;
  }
  .home nav a:not(#contact) {
    padding: var(--s-2) var(--s1);
    margin-bottom: var(--s0);
  }
  #contact {
    margin-left: var(--s1);
  }
}
.home nav a {
  @apply underline;
  font-weight: 700;
}

/*********************************
 * contact link mailto animation *
 *********************************/

#contact ul {
  position: relative;
  transform-style: preserve-3d;
  overflow: hidden;
}
#contact ul li {
  padding: var(--s-2) var(--s1);
  transition: transform 200ms cubic-bezier(0, 0.65, 0.7, 0.9), opacity 150ms;
}
#contact ul li:nth-child(2) {
  padding: var(--s-2) 0;
  transform: rotateX(-90deg) translateZ(20px);
  opacity: 0;
  position: absolute;
  top: 0;
  @apply bg-white text-black;
}
#contact ul:hover li:nth-child(1) {
  transform: rotateX(90deg) translateZ(20px);
  position: absolute;
  opacity: 0;
}
#contact ul:hover li:nth-child(2) {
  transform: rotateX(0deg) translateZ(20px);
  opacity: 1;
  position: relative;
}

/***********
 * content *
 ***********/

/* Stack elements in sections articles
 * ref: https://every-layout.dev/layouts/stack */
.stack > * + * {
  margin-top: 1rem;
}
article > * + * {
  margin-top: var(--s-1);
}
.stack\:3 > * + * {
  margin-top: var(--s3);
}
.stack\:5 > * + * {
  margin-top: var(--s5);
}

/* center elements in sections articles
 * ref: https://every-layout.dev/layouts/center */
.center {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--measure);
  display: flex;
  flex-direction: column;
  align-items: center;
}
.center-no-intrinsic {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--measure);
}
.center\:3\/2 {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: calc(var(--measure) * 1.5);
}

/* clusters, used for skill tags
 * ref: https://absolutely.every-layout.dev/layouts/cluster */
.cluster {
  --space: var(--s-2);
  overflow: hidden;
}
.cluster > * {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: baseline;
  /* negative margin on the wrapper to make cluster elements "stick" to their container */
  margin: calc(var(--space) / 2 * -1);
}
.cluster > * > * {
  margin: calc(var(--space) / 2);
}

/* cover: one vertically centered element with another element sitting at the top
 * ref: https://absolutely.every-layout.dev/layouts/cover */
.cover {
  display: flex;
  flex-direction: column;
  min-height: 97vh;
  padding: 1rem;
}

.cover > * {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.cover > :first-child:not(.cover--centered) {
  margin-top: 0;
}

.cover > :last-child:not(.cover--centered) {
  margin-bottom: 0;
}

.cover > .cover--centered {
  margin-top: auto;
  margin-bottom: auto;
}

section {
  padding-top: var(--s8);
  padding-bottom: var(--s8);
  padding-left: var(--s1);
  padding-right: var(--s1);
}
section:last-child {
  min-height: 100vh;
  padding-bottom: var(--s4);
}
/* angled top border
 * ref: https://developer.microsoft.com/en-us/microsoft-edge/testdrive/demos/variable-fonts/ */
section {
  position: relative;
}
section::before {
  position: absolute;
  display: block;
  content: "";
  right: 0;
  top: calc(-8vmin + 1px);
  border-bottom: 8vmin solid #050505;
  border-left: 100vw solid transparent;
}
section:nth-child(2)::before {
  border-bottom-color: #fafafa;
}

/* two columns when space allows it */
.skills {
  display: flex;
  flex-wrap: wrap;
}
.skills > * {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: calc(
    var(--measure) / 2 - var(--s0)
  ); /* remove the outer margins from the computation */
  margin: calc(var(--s0) / 2);
}

.taglist {
  font-family: "IBM Plex Mono", monospace;
}

.taglist li {
  font-size: var(--s-1);
}

section:nth-child(2) article:nth-child(even) {
  margin-left: auto;
}

#contact-cta {
  @apply tracking-wider;
  transition: color 300ms, border-color 300ms;
  display: inline-block;
  padding: var(--s2);
  text-decoration: none;
}

/********
 * BLOG *
 ********/

.blog {
  --measure: 75ch;
}

.blog header > * {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.blog-home-header {
  padding: var(--s5);
}

.blog nav {
  padding: var(--s2) var(--s0);
}
.blog nav > a + a {
  margin-left: var(--s2);
}

.blog article {
  margin-top: var(--s3);
}

.blog article ul[class] {
  list-style: none;
}
.blog article ul {
  list-style: inherit;
}
.blog article ul > li + li {
  margin-top: var(--s1);
}
.blog article ul li > * + * {
  margin-top: var(--s-3);
}

.blog article .intro {
  font-weight: 700;
}

.blog h1 {
  font-size: calc(var(--s1) + 3vw);
}
.blog h2 {
  font-size: var(--s1);
  font-weight: 700;
}
.blog .post h2 {
  font-family: var(--font-special);
  font-size: calc(var(--s0) + 1.8vw);
}

.blog blockquote > * + * {
  margin-top: var(--s0);
}
.blog blockquote {
  border-left: 3px solid;
  padding-left: var(--s0);
  padding-top: var(--s-4);
  padding-bottom: var(--s-4);
}

.blog code {
  font-size: 1.1em;
  font-family: var(--font-mono);
}
.blog pre {
  @apply bg-black text-white;
  padding: var(--s1);
  overflow-x: scroll;
}
/* stolen from https://hankchizljaw.com/wrote/creating-a-full-bleed-css-utility/ */
.blog figure,
.blog pre,
.full-bleed {
  width: 100vw;
  max-width: calc(1.2 * var(--measure));
  margin-left: 50%;
  transform: translateX(-50%);
  display: block;
  box-sizing: border-box;
}

.blog img {
  filter: grayscale(100%) contrast(1.5);
}
.blog figcaption {
  font-size: var(--s-1);
  padding-left: var(--s-4);
  padding-right: var(--s-4);
}

@supports (display: flex) {
  .book {
    display: flex;
    align-items: stretch;
    padding-bottom: 1.5rem;
    font-size: var(--s-1);
    overflow-x: hidden;
    padding-left: 1rem; /* otherwise the left cover is hidden because of overflow-x: hidden */
  }

  .book > .left-page,
  .book > .right-page {
    flex-shrink: 0;
    min-width: calc(var(--measure) / 3);
    height: auto;
    padding: var(--s0);
    padding-bottom: calc(var(--s0) + 3.6rem);
    top: 0;
    border: 4px solid;
    position: relative;
    @apply bg-white;
  }
  .book > .left-page {
    border-top-right-radius: 30px;
  }
  .book > .right-page {
    border-top-left-radius: 30px;
  }
  .book > .left-page::before {
    content: "";
    position: absolute;
    top: 1.5rem;
    left: -1rem;
    right: -1rem;
    bottom: -1.5rem;
    z-index: -1;
    @apply bg-black;
  }
  .book > .right-page::before {
    content: "";
    position: absolute;
    top: 1.5rem;
    left: -1rem;
    right: -1rem;
    bottom: -1.5rem;
    z-index: -1;
    @apply bg-black;
  }
  .book > .left-page > .page-1 {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3.6rem;
    border-top: 4px solid;
    border-right: 4px solid;
    border-top-right-radius: 30px;
  }
  .book > .left-page > .page-2 {
    position: absolute;
    bottom: 1.6rem;
    left: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-right: 4px solid;
    border-top-right-radius: 50px;
  }
  .book > .left-page > .page-3 {
    position: absolute;
    bottom: 0.8rem;
    left: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-right: 4px solid;
  }
  .book > .left-page > .page-4 {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-right: 4px solid;
  }
  .book > .right-page > .page-1 {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 3.6rem;
    border-top: 4px solid;
    border-left: 4px solid;
    border-top-left-radius: 30px;
  }
  .book > .right-page > .page-2 {
    position: absolute;
    bottom: 1.6rem;
    right: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-left: 4px solid;
    border-top-left-radius: 50px;
  }
  .book > .right-page > .page-3 {
    position: absolute;
    bottom: 0.8rem;
    right: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-left: 4px solid;
  }
  .book > .right-page > .page-4 {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 0.8rem;
    border-top: 4px solid;
    border-left: 4px solid;
  }
  .book table {
    width: 100%;
  }
  .book th {
    text-align: left;
  }
  .book tr > td + td {
    padding-left: var(--s-3);
  }
  .book td:last-child,
  .book th:last-child {
    text-align: right;
  }
}

.project-list > * + * {
  margin-top: var(--s3);
}
.project-list h2 {
  font-size: var(--s2);
}
.project-list li > * + * {
  margin-top: var(--s-3);
}

@tailwind utilities;

